--- a/public/assets/stylesheets/main.css
+++ b/public/assets/stylesheets/main.css
@@ -21,12 +21,12 @@ body{
 
 .home-container{
     background: transparent;
-    background: rgba(56, 55, 55, 0.774);
+    background: rgba(217, 230, 235, 0.931);
     
 }
 
 .article-content{
-    color:whitesmoke;
+    color:rgb(54, 53, 53);
     padding: 10px;
 }
 
@@ -73,4 +73,16 @@ body{
 /* top segment */
 .ui.piled.segment:first-child {
     margin-top: 2px 0px 5px 0px;
+}
+
+/* top segment */
+.ui.segment {
+    position: relative;
+    background: #359be8;
+}
+
+/* menu home style */
+.ui.secondary.inverted.pointing.menu .active.item:hover {
+    border-color: #359be8;
+    /* color: #fff; */
 }
