--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -1,62 +1,61 @@
 <div class="ui container home-container sticky">
-    <div class="ui piled segment">
+    <div class="ui piled blue segment">
         <h1 class="ui header centered">Saved Articles</h1>
         <h3 class="ui header centered">These are your saved articles</h3>
-
     </div>
 
-    <div class="ui items">
-        {{#each articles}}
-        <div class="item">
-            
-            <div class="ui small image">
-                <img src="{{this.img}}">
+        <div class="ui divided items">
+            {{#each articles}}
+            <div class="item">
+                <div class="image">
+                    <img src="{{this.img}}">
+                </div>
+                <div class="content">
+                    <form id="articleForm" action="/scrape_articles">
+                        <h2>
+                            <a target="_blank" class="header">{{this.title}}</a>
+                        </h2>
+                        <div class="meta">
+                            <span class="cinema">{{this.writer}}</span>
+                        </div>
+                        <div class="description">
+                            <p>{{this.summary}}</p>
+                        </div>
+                        <div class="extra">
+                            <button id="{{this._id}}" class="ui right floated red icon button removeArticleButton">
+                                <i class="trash alternate icon"></i>
+                            </button>
+                            <a href="/articles/{{this._id}}" class="ui right floated inverted primary button">
+                                <i class="pencil alternate icon"></i> Article Notes
+                            </a>
+                            <a href="{{this.url}}" target="_blank" class="ui right floated blue button">
+                                <i class="linkify icon"></i> Link
+                            </a>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="left aligned content article-content">
-                <div class="header">
-                    <h3>{{this.title}}</h3>
-                </div>
-                <div class="description">
-                    <p>{{this.summary}}</p>
-                </div>
-                 <div class="description">
-                    <p>{{this.writer}}</p>
-                </div>
-                <div class="extra">
-                    <button id="{{this._id}}" class="ui right floated red icon button removeArticleButton">
-                        <i class="trash alternate icon"></i>
-                    </button>
-                    <button id="{{this._id}}" class="ui right floated inverted primary button addNotesButton">
-                        <i class="pencil alternate icon"></i> Add Notes
-                    </button>
-                    <a href="{{this.url}}" target="_blank" class="ui right floated blue button">
-                        <i class="linkify icon"></i> Link
-                    </a>
-                </div>
-            </div>
+            {{/each}}
         </div>
-        <div class="ui inverted fitted divider"></div>
-        {{/each}}
-
     </div>
+
+    {{!-- Large modal to host article notes --}}
 </div>
-<div class="ui longer modal">
+{{!-- <div class="ui longer modal">
     <div class="header">Article Notes</div>
-    <div  class="description">
+    <div class="description">
         <h3 id="articleTitle"></h3>
     </div>
     <div class="scrolling content">
         <div class="ui comments">
             <div class="comment">
-                <div class="content">
-                    {{#each articule.notes}}
+                <div id="commentDiv" class="content">
+                    {{#each foundArticule.notes}}
                     <div class="metadata">
-                        <span class="date">Today at 5:42PM</span>
+                        <span class="date">Created On {{foundArticule.notes.createAt}}</span>
                     </div>
                     <div class="text">
-                        {{foundArticule._id}} {{foundArticule._id}} Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                        a galley of type and scrambled it to make a type specimen book.
+                       <p>{{foundArticule.notes.text}}</p>
                     </div>
                     <div class="actions">
                         <a class="reply ui yellow button">Edit</a>
@@ -70,7 +69,7 @@
                         <div class="ui blue deny labeled icon button">
                             <i class="undo alternate icon"></i> Cancel
                         </div>
-                        <button  type="submit" class="ui positive labeled submit icon button">
+                        <button type="submit" class="ui positive labeled submit icon button">
                             <i class="icon edit"></i> Submit Note
                         </button>
                     </form>
@@ -78,18 +77,18 @@
             </div>
         </div>
     </div>
-</div>
+</div> --}}
 
-
+{{!-- small modal to host article deletion confirmation message --}}
 <div class="ui mini modal">
-    <div class="header">Info</div>
+    <div class="red header">Please Confirm!</div>
     <div class="content">
-        <p>Do you really want to remove this article?</p>
+        <h3>Do you really want to remove article article?</h3>
     </div>
     <div class="actions">
-        <div class="ui cancel blue button">No</div>
-        <form  id="deleteForm" method="post">
-            <button type="submit" id="delete" class="ui approve red button">Yes</button>
+        <a class="ui cancel deny blue button">No</a>
+        <form id="deleteForm" method="post">
+            <button type="submit" class="ui approve gray button">Yes</button>
         </form>
     </div>
 </div>
