--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,53 +1,9 @@
 <div class="ui container home-container sticky">
+
     <div class="ui piled segment">
-        <h1 class="ui header centered">Welcome to the Web Scraper</h1>
-        <h3 class="ui header centered">Get all the latest news from around the world</h3>
-
+        <h1 class="ui header centered">Welcome to the Tech News Web Scraper</h1>
+        <h3 class="ui header centered">Get all the latest technology news from around the world</h3>
     </div>
-
-    {{!--
-    <div class="ui items">
-        {{#each data}}
-        <div class="item">
-
-            <div class="ui small image">
-                <img src="{{this.img}}">
-            </div>
-
-            <div class="left aligned content article-content">
-                <form id="articleForm" action="/scrape_articles">
-                    <input type="hidden" name="title" value="{{this.title}}">
-                    <input type="hidden" name="url" value="{{this.url}}">
-                    <input type="hidden" name="img" value="{{this.img}}">
-                    <input type="hidden" name="writer" value="{{this.writer}}">
-                    <input type="hidden" name="summary" value="{{this.summary}}">
-                    <div class="header">
-                        <h3>{{this.title}}</h3>
-                    </div>
-                    <div class="description">
-                        <p>{{this.summary}}</p>
-                    </div>
-                    <div class="description">
-                        <p>{{this.writer}}</p>
-                    </div>
-                    <div class="extra">
-                        <button type="submit" class="ui right floated inverted primary button saveButton">
-                            <i class="save icon"></i> Save Article
-                        </button>
-                        <a href="{{this.url}}" target="_blank" class="ui right floated blue button">
-                            <i class="linkify icon"></i> Link
-                        </a>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="ui fitted divider"></div>
-        {{/each}}
-
-    </div> --}}
-
-
-
 
     <div class="ui divided items">
         {{#each data}}
@@ -62,23 +18,26 @@
                     <input type="hidden" name="img" value="{{this.img}}">
                     <input type="hidden" name="writer" value="{{this.writer}}">
                     <input type="hidden" name="summary" value="{{this.summary}}">
-                    <h2><a href="{{this.url}}" target="_blank" class="header">{{this.title}}</a></h2>
+                    <h2>
+                        <a href="{{this.url}}" target="_blank" class="header">{{this.title}}</a>
+                    </h2>
                     <div class="meta">
-                        <span class="cinema">{{this.writer}}</span>
+                        <span class="cinema">{{this.writer}} {{currentUser.firstName}}</span>
                     </div>
                     <div class="description">
                         <p>{{this.summary}}</p>
                     </div>
+                    {{#if ../currentUser}}
                     <div class="extra">
                         <button type="submit" class="ui right floated inverted primary button saveButton">
                             <i class="save icon"></i> Save Article
                         </button>
                     </div>
+                    {{/if}}
                 </form>
             </div>
         </div>
         {{/each}}
-
     </div>
 </div>
 
