--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
 <body>
   <div class="ui inverted segment sticky">
-    <div class="ui inverted secondary pointing menu container">
+    <div class="ui inverted secondary pointing stackable menu container">
       <a href="/home" class="active item">
         <i class="home icon"></i> Home
       </a>
