--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,28 +1,30 @@
-<div class="ui four column centered grid">
-    <div class="column">
-        <div class="ui inverted segment">
-            <form action="/signin" class="ui inverted form" method="POST">
-                <div class="required field">
-                    <label>Username</label>
-                    <div class="ui icon input">
-                        <input name="username" placeholder="username" type="text">
-                        <i class="user icon"></i>
+<div class="ui container home-container sticky">
+    <div class="ui four column centered grid">
+        <div class="column">
+            <div class="ui inverted segment">
+                <form action="/signin" class="ui inverted form" method="POST">
+                    <div class="required field">
+                        <label>Username</label>
+                        <div class="ui icon input">
+                            <input name="username" placeholder="username" type="text">
+                            <i class="user icon"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="required field">
-                    <label>Password</label>
-                    <div class="ui icon input">
-                        <input type="password" name="password" placeholder="Password">
-                        <i class="lock icon"></i>
+                    <div class="required field">
+                        <label>Password</label>
+                        <div class="ui icon input">
+                            <input type="password" name="password" placeholder="Password">
+                            <i class="lock icon"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="ui hidden divider"></div>
-                <div class="ui grid">
-                    <div class="center aligned column">
-                        <button type="submit" class="fluid ui submit primary button">Submit</button>
+                    <div class="ui hidden divider"></div>
+                    <div class="ui grid">
+                        <div class="center aligned column">
+                            <button type="submit" class="fluid ui submit primary button">Submit</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
