--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -4,91 +4,52 @@
         <h3 class="ui header centered">These are your saved articles</h3>
     </div>
 
-        <div class="ui divided items">
-            {{#each articles}}
-            <div class="item">
-                <div class="image">
-                    <img src="{{this.img}}">
-                </div>
-                <div class="content">
-                    <form id="articleForm" action="/scrape_articles">
-                        <h2>
-                            <a target="_blank" class="header">{{this.title}}</a>
-                        </h2>
-                        <div class="meta">
-                            <span class="cinema">{{this.writer}}</span>
-                        </div>
-                        <div class="description">
-                            <p>{{this.summary}}</p>
-                        </div>
-                        <div class="extra">
-                            <button id="{{this._id}}" class="ui right floated red icon button removeArticleButton">
-                                <i class="trash alternate icon"></i>
-                            </button>
-                            <a href="/articles/{{this._id}}" class="ui right floated inverted primary button">
-                                <i class="pencil alternate icon"></i> Article Notes
-                            </a>
-                            <a href="{{this.url}}" target="_blank" class="ui right floated blue button">
-                                <i class="linkify icon"></i> Link
-                            </a>
-                        </div>
-                    </form>
-                </div>
+    <div class="ui divided items">
+        {{#each articles}}
+        <div class="item">
+            <div class="image">
+                <img src="{{this.img}}">
             </div>
-            {{/each}}
-        </div>
-    </div>
-
-    {{!-- Large modal to host article notes --}}
-</div>
-{{!-- <div class="ui longer modal">
-    <div class="header">Article Notes</div>
-    <div class="description">
-        <h3 id="articleTitle"></h3>
-    </div>
-    <div class="scrolling content">
-        <div class="ui comments">
-            <div class="comment">
-                <div id="commentDiv" class="content">
-                    {{#each foundArticule.notes}}
-                    <div class="metadata">
-                        <span class="date">Created On {{foundArticule.notes.createAt}}</span>
+            <div class="content">
+                    <h2>
+                        <a target="_blank" class="header">{{this.title}}</a>
+                    </h2>
+                    <div class="meta">
+                        <span class="cinema">{{this.writer}}</span>
                     </div>
-                    <div class="text">
-                       <p>{{foundArticule.notes.text}}</p>
+                    <div class="description">
+                        <p>{{this.summary}}</p>
                     </div>
-                    <div class="actions">
-                        <a class="reply ui yellow button">Edit</a>
-                        <a class="save ui red button">Delete</a>
-                    </div>
-                    {{/each}}
-                    <form id="notesForm" class="ui reply form" method="POST">
-                        <div class="field">
-                            <textarea id="notes" name="text"></textarea>
-                        </div>
-                        <div class="ui blue deny labeled icon button">
-                            <i class="undo alternate icon"></i> Cancel
-                        </div>
-                        <button type="submit" class="ui positive labeled submit icon button">
-                            <i class="icon edit"></i> Submit Note
+                    <div class="extra">
+                        {{!-- <form action="/articles/{{this._id}}?_method=DELETE" method="POST"> --}}
+                        <button id="{{this._id}}" type="submit" class="ui right floated red icon button removeArticleButton">
+                            <i class="trash alternate icon"></i>
                         </button>
-                    </form>
-                </div>
+                        {{!-- </form> --}}
+                        <a href="/articles/saved/{{this._id}}" class="ui right floated inverted primary button">
+                            <i class="pencil alternate icon"></i> Article Notes
+                        </a>
+                        <a href="{{this.url}}" target="_blank" class="ui right floated blue button">
+                            <i class="linkify icon"></i> Link
+                        </a>
+                    </div>
             </div>
         </div>
+        {{/each}}
     </div>
-</div> --}}
+</div>
+
 
 {{!-- small modal to host article deletion confirmation message --}}
 <div class="ui mini modal">
     <div class="red header">Please Confirm!</div>
     <div class="content">
-        <h3>Do you really want to remove article article?</h3>
+        <h3>Do you really want to remove this article from your saved?</h3>
     </div>
     <div class="actions">
-        <a class="ui cancel deny blue button">No</a>
-        <form id="deleteForm" method="post">
-            <button type="submit" class="ui approve gray button">Yes</button>
+        <form id="deleteForm" action="" method="POST">
+            <div class="ui cancel blue button">No</div>
+            <button id="deleteButton" type="submit" class="ui approve red button">Yes</button>
         </form>
     </div>
 </div>
