--- a/views/notes.handlebars
+++ b/views/notes.handlebars
@@ -24,7 +24,7 @@
                             </div>
                             <div class="actions">
                                 <form action="/articles/{{../article._id}}/note/{{this._id}}?_method=DELETE" method="POST">
-                                    <button type="submit" class="ui right floated red icon button">
+                                    <button type="submit" class="ui right floated red icon button" data-content="Clicking this button will delete this note">
                                         <i class="trash alternate icon"></i>
                                     </button>
                                 </form>
