--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -2,6 +2,15 @@
     <div class="ui four column centered grid">
         <div class="column">
             <div class="ui inverted segment">
+                {{#if info}}
+                    <div class="ui compact blue message">
+                        <p>{{info}}</p>
+                    </div>
+                    {{/if}} {{#if error}}
+                    <div class="ui compact negative message">
+                        <p>{{error}}</p>
+                    </div>
+                    {{/if}}
                 <form action="/signin" class="ui inverted form" method="POST">
                     <div class="required field">
                         <label>Username</label>
