--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,6 +3,15 @@
     <div class="ui piled segment">
         <h1 class="ui header centered">Welcome to the Tech News Web Scraper</h1>
         <h3 class="ui header centered">Get all the latest technology news from around the world</h3>
+        {{#if info}}
+        <div class="ui compact blue message">
+            <p>{{info}}</p>
+        </div>
+        {{/if}} {{#if error}}
+        <div class="ui compact negative message">
+            <p>{{error}}</p>
+        </div>
+        {{/if}}
     </div>
 
     <div class="ui divided items">
