--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -4,10 +4,12 @@
             <div class="ui inverted segment">
                 {{#if info}}
                     <div class="ui compact blue message">
+                         <i class="close icon"></i>
                         <p>{{info}}</p>
                     </div>
                     {{/if}} {{#if error}}
                     <div class="ui compact negative message">
+                         <i class="close icon"></i>
                         <p>{{error}}</p>
                     </div>
                     {{/if}}
