--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,9 +5,11 @@
         <h3 class="ui header centered">Get all the latest technology news from around the world</h3>
         {{#if info}}
         <div class="ui compact blue message">
+            <i class="close icon"></i>
             <p>{{info}}</p>
         </div>
         {{/if}} {{#if error}}
+        <i class="close icon"></i>
         <div class="ui compact negative message">
             <p>{{error}}</p>
         </div>
