--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -12,7 +12,7 @@
             </div>
             <div class="content">
                     <h2>
-                        <a target="_blank" class="header">{{this.title}}</a>
+                        <a href="{{this.url}}" target="_blank" class="header">{{this.title}}</a>
                     </h2>
                     <div class="meta">
                         <span class="cinema">{{this.writer}}</span>
@@ -26,9 +26,6 @@
                         </button>
                         <a href="/articles/saved/{{this._id}}" class="ui right floated inverted primary button">
                             <i class="pencil alternate icon"></i> Article Notes
-                        </a>
-                        <a href="{{this.url}}" target="_blank" class="ui right floated blue button">
-                            <i class="linkify icon"></i> Link
                         </a>
                     </div>
             </div>
