--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -22,7 +22,7 @@
                     <div class="required field">
                         <label>Username</label>
                         <div class="ui icon input">
-                            <input name="username" placeholder="username" type="text">
+                            <input name="username" placeholder="username" type="text" autocomplete="Username">
                             <i class="user icon"></i>
                         </div>
                     </div>
