--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -7,19 +7,19 @@
           <div class="required field">
             <label>First Name</label>
             <div class="ui icon input">
-              <input name="first_name" placeholder="First Name" type="text">
+              <input name="first_name" placeholder="First Name" type="text" autocomplete="Enter First Name">
             </div>
           </div>
           <div class="required field">
             <label>Last Name</label>
             <div class="ui icon input">
-              <input name="last_name" placeholder="Last Name" type="text">
+              <input name="last_name" placeholder="Last Name" type="text" autocomplete="off">
             </div>
           </div>
           <div class="required field">
             <label>Username</label>
             <div class="ui icon input">
-              <input name="username" placeholder="username" type="text">
+              <input name="username" placeholder="username" type="text" autocomplete="off">
               <i class="user icon"></i>
             </div>
           </div>
