--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,7 +1,6 @@
-<div class="ui container home-container sticky">
-
-  <div class="ui two column centered grid">
-    <div class="column">
+<div class="ui container">
+  <div class="ui grid">
+    <div class="sixteen wide mobile eight wide tablet eight wide computer centered column">
       <div class="ui inverted segment">
         <form action="/signup" class="ui inverted form" method="POST">
           <div class="required field">
