--- a/public/assets/stylesheets/main.css
+++ b/public/assets/stylesheets/main.css
@@ -112,3 +112,17 @@ h3.ui.header {
 .ui.comments .comment .text {
     font-size: 1.3em;
 }
+
+.ui.message {
+    width: 100%;
+}
+
+
+.commentDiv >.ui.segment {
+    position: relative;
+    background: #ffffff;
+}
+
+.ui.grid>.centered.column, .ui.grid>.row>.centered.column {
+    margin-top: 10%;
+}
