--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,6 +1,6 @@
-<div class="ui container home-container sticky">
-    <div class="ui four column centered grid">
-        <div class="column">
+<div class="ui container">
+    <div class="ui grid">
+        <div class="sixteen wide mobile eight wide tablet eight wide computer centered column">
             <div class="ui inverted segment">
                 {{#if info}}
                 <div class="ui compact blue message">
