--- a/public/assets/stylesheets/main.css
+++ b/public/assets/stylesheets/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("https://images.unsplash.com/photo-1529243856184-fd5465488984?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=95834c9e01a9ff2a5a61c79fc92a180f&auto=format&fit=crop&w=1969&q=80");
+    background-image: linear-gradient(rgba(26, 26, 26, 0.5),rgba(26, 26, 26, 0.5)),url("https://images.unsplash.com/photo-1529243856184-fd5465488984?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=95834c9e01a9ff2a5a61c79fc92a180f&auto=format&fit=crop&w=1969&q=80");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
