--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,10 +19,10 @@
         <i class="home icon"></i> Home
       </a>
       <a href="/articles/saved" class="item">
-        My Articles
+        My Saved Articles
       </a>
       <a href="/scrape_articles" class="item">
-        Scrape Website
+        Get Articles
       </a>
       <div class="right item right-buttons">
         {{#unless currentUser}}
