--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,6 +3,7 @@
     <div class="sixteen wide mobile eight wide tablet eight wide computer centered column">
       <div class="ui inverted segment">
         <form action="/signup" class="ui inverted form" method="POST">
+          <h3 class="ui inverted dividing header">Sign-Up</h3>
           <div class="required field">
             <label>First Name</label>
             <div class="ui icon input">
