--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -2,7 +2,7 @@
     <div class="ui grid">
         <div class="sixteen wide mobile eight wide tablet eight wide computer centered column">
             <div class="ui inverted segment">
-                <h3 class="ui inverted dividing header">Sign-In</h3>
+                <h3 class="ui inverted dividing header">Sign In</h3>
                 {{#if info}}
                 <div class="ui compact blue message">
                     <i class="close icon"></i>
