--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
 
     <div class="ui piled segment">
         <h1 class="ui header centered">Welcome to the Tech News Web Scraper</h1>
-        <h3 class="ui header centered">Get all the latest technology news from around the world</h3>
+        <h3 class="ui header centered">Get all the latest technology news from around the world.</h3>
         {{#if info}}
         <div class="ui compact blue message">
             <i class="close icon"></i>
