--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
   <div class="ui grid">
     <div class="sixteen wide mobile eight wide tablet eight wide computer centered column">
       <div class="ui inverted segment">
-        <form action="/signup" class="ui inverted form" method="POST">
+        <form action="/signup" class="ui inverted form" id="sign-upForm" method="POST">
           <h3 class="ui inverted dividing header">Sign Up</h3>
           <div class="required field">
             <label>First Name</label>
@@ -37,6 +37,7 @@
                 <i class="signup icon"></i> Sign Up</button>
             </div>
           </div>
+          <div class="ui error message"></div>
         </form>
       </div>
     </div>
