--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <div class="ui inverted segment sticky">
-    <div class="ui inverted secondary pointing stackable menu container">
+  <div class="ui inverted segment">
+    <div class="ui inverted secondary pointing stackable top sticky menu container">
       <a href="/home" class="active item">
         <i class="home icon"></i> Home
       </a>
@@ -45,7 +45,10 @@
 
 
   {{{ body }}}
-
+  <div class="spacer"></div>
+  <div class="ui inverted bottom fixed menu">
+    <p class="item">Copyright &copy;2018 Emerson Doyah Projects</p>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.js"></script>
