--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -39,6 +39,7 @@
         {{/each}}
     </div>
 </div>
+ <div class="spacer"></div>
 
 
 {{!-- small modal to host article deletion confirmation message --}}
