added rel="noopener" to links

--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -18,7 +18,7 @@
             </div>
             <div class="content">
                 <h2>
-                    <a href="{{this.url}}" target="_blank" class="header">{{this.title}}</a>
+                    <a href="{{this.url}}" target="_blank" rel="noopener" class="header">{{this.title}}</a>
                 </h2>
                 <div class="meta">
                     <span class="cinema">{{this.writer}}</span>
