--- a/views/scraped_articles.handlebars
+++ b/views/scraped_articles.handlebars
@@ -30,7 +30,7 @@
                     <input type="hidden" name="writer" value="{{this.writer}}">
                     <input type="hidden" name="summary" value="{{this.summary}}">
                     <h2>
-                        <a href="{{this.url}}" target="_blank" class="header">{{this.title}}</a>
+                        <a href="{{this.url}}" target="_blank" rel="noopener" class="header">{{this.title}}</a>
                     </h2>
                     <div class="meta">
                         <span class="cinema">{{this.writer}} {{currentUser.firstName}}</span>
